--- a/ems_vue/src/main/resources/static/regist.html
+++ b/ems_vue/src/main/resources/static/regist.html
@@ -3,12 +3,12 @@
 <head>
     <title>regist</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<link rel="shortcut icon" href="#" />
+    <link rel="shortcut icon" href="#"/>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
 <body>
 <div id="wrap">
-    <div id="top_content" >
+    <div id="top_content">
         <div id="header">
             <div id="rightheader">
                 <p>
@@ -38,7 +38,7 @@
                             用户名:
                         </td>
                         <td valign="middle" align="left">
-                            <input type="text" class="inputgri" name="username"/>
+                            <input type="text" class="inputgri" v-model="user.username"/>
                         </td>
                     </tr>
                     <tr>
@@ -46,7 +46,7 @@
                             真实姓名:
                         </td>
                         <td valign="middle" align="left">
-                            <input type="text" class="inputgri" name="name"/>
+                            <input type="text" class="inputgri" v-model="user.realName"/>
                         </td>
                     </tr>
                     <tr>
@@ -54,7 +54,7 @@
                             密码:
                         </td>
                         <td valign="middle" align="left">
-                            <input type="password" class="inputgri" name="pwd"/>
+                            <input type="password" class="inputgri" v-model="user.password"/>
                         </td>
                     </tr>
                     <tr>
@@ -63,28 +63,28 @@
                         </td>
                         <td valign="middle" align="left">
                             男
-                            <input type="radio" class="inputgri" name="sex" value="m" checked="checked"/>
+                            <input type="radio" class="inputgri" v-model="user.sex" value="男" checked="checked"/>
                             女
-                            <input type="radio" class="inputgri" name="sex" value="f"/>
+                            <input type="radio" class="inputgri" v-model="user.sex" value="女"/>
                         </td>
                     </tr>
 
                     <tr>
-						<td valign="middle" align="right">
-							验证码:
-						</td>
-                        <td valign="middle" align="left">
-                            <input type="text" class="inputgri" name="number"/>
+                        <td valign="middle" align="right">
+                            验证码:
                         </td>
-						<td>
-							<img id="num" :src="url" @click="getImage"/>
-							<a href="javascript:;"
-							   @click="getImage">换一张</a>
-						</td>
+                        <td valign="middle" align="left">
+                            <input type="text" class="inputgri" v-model="code"/>
+                        </td>
+                        <td>
+                            <img id="num" :src="url" @click="getImage"/>
+                            <a href="javascript:;"
+                               @click="getImage">换一张</a>
+                        </td>
                     </tr>
                 </table>
                 <p>
-                    <input type="submit" class="button" value="Submit &raquo;"/>
+                    <input type="button" class="button" @click="submit" value="Submit &raquo;"/>
                 </p>
             </form>
         </div>
@@ -104,19 +104,29 @@
         el: "#wrap",
         data: {
             url: '',
+            user: {
+                sex: '男'
+            },
+            code: ''
         },
-		methods:{
-        	getImage: function () {
-				this.getSrc();
-			},
-			getSrc: function () {
-				var _this = this;
-				axios.get("http://localhost:8989/ems_vue/user/getImage?time="+new Date().getTime()).then(res => {
-					console.log(res.data);
-					_this.url = res.data;
-				});
-			}
-		},
+        methods: {
+            getImage: function () {
+                this.getSrc();
+            },
+            getSrc: function () {
+                var _this = this;
+                axios.get("http://localhost:8989/ems_vue/user/getImage?time=" + new Date().getTime()).then(res => {
+                    console.log(res.data);
+                    _this.url = res.data;
+                });
+            },
+            submit: function () {
+                debugger;
+                axios.post("http://localhost:8989/ems_vue/user/register?code=" + this.code, this.user).then(res => {
+                    console.log(res.data);
+                });
+            }
+        },
         created: function () {
             this.getSrc();
         }
