--- a/ems_vue/src/main/resources/static/emplist.html
+++ b/ems_vue/src/main/resources/static/emplist.html
@@ -1,107 +1,127 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-	<head>
-		<title>emplist</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
-	</head>
-	<body>
-		<div id="wrap">
-			<div id="top_content"> 
-				<div id="header">
-					<div id="rightheader">
-						<p>
-							2009/11/20 
-							<br />
-							安全退出
-						</p>
-					</div>
-					<div id="topheader">
-						<h1 id="title">
-							<a href="#">main</a>
-						</h1>
-					</div>
-					<div id="navigation">
-					</div>
-				</div>
-				<div id="content">
-					<p id="whereami">
-					</p>
-					<h1>
-						Welcome!
-					</h1>
-					<table class="table">
-						<tr class="table_header">
-							<td>
-								ID
-							</td>
-							<td>
-								Name
-							</td>
-							<td>
-								Photo
-							</td>
-							<td>
-								Salary
-							</td>
-							<td>
-								Age
-							</td>
-							<td>
-								Operation
-							</td>
-						</tr>
-						<tr class="row1">
-							<td>
-								1
-							</td>
-							<td>
-								zhangshan
-							</td>
-							<td>
-								<img src="./img/nane.gif" style="height: 60px;">
-							</td>
-							<td>
-								20000
-							</td>
-							<td>
-								20
-							</td>
-							<td>
-								<a href="emplist.html">delete emp</a>&nbsp;<a href="updateEmp.html">update emp</a>
-							</td>
-						</tr>
-						<tr class="row2">
-							<td>
-								2
-							</td>
-							<td>
-								lishi
-							</td>
-							<td>
-								<img src="./img/nane.gif" style="height: 60px;">
-							</td>
-							<td>
-								20000
-							</td>
-							<td>
-								20
-							</td>
-							<td>
-								<a href="emplist.html">delete emp</a>&nbsp;<a href="updateEmp.html">update emp</a>
-							</td>
-						</tr>
-					</table>
-					<p>
-						<input type="button" class="button" value="Add Employee" onclick="location='addEmp.html'"/>
-					</p>
-				</div>
-			</div>
-			<div id="footer">
-				<div id="footer_bg">
-				ABC@126.com
-				</div>
-			</div>
-		</div>
-	</body>
+<head>
+    <title>emplist</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
+</head>
+<body>
+<div id="wrap">
+    <div id="top_content">
+        <div id="header">
+            <div id="rightheader">
+                <p>
+                    2009/11/20
+                    <br/>
+                    安全退出
+                </p>
+            </div>
+            <div id="topheader">
+                <h1 id="title">
+                    <a href="#">main</a>
+                </h1>
+            </div>
+            <div id="navigation">
+            </div>
+        </div>
+        <div id="content">
+            <p id="whereami">
+            </p>
+            <h1>
+                Welcome {{user.username}} !
+            </h1>
+            <table class="table">
+                <tr class="table_header">
+                    <td>
+                        ID
+                    </td>
+                    <td>
+                        Name
+                    </td>
+                    <td>
+                        Photo
+                    </td>
+                    <td>
+                        Salary
+                    </td>
+                    <td>
+                        Age
+                    </td>
+                    <td>
+                        Operation
+                    </td>
+                </tr>
+                <tr class="row1">
+                    <td>
+                        1
+                    </td>
+                    <td>
+                        zhangshan
+                    </td>
+                    <td>
+                        <img src="./img/nane.gif" style="height: 60px;">
+                    </td>
+                    <td>
+                        20000
+                    </td>
+                    <td>
+                        20
+                    </td>
+                    <td>
+                        <a href="emplist.html">delete emp</a>&nbsp;<a href="updateEmp.html">update emp</a>
+                    </td>
+                </tr>
+                <tr class="row2">
+                    <td>
+                        2
+                    </td>
+                    <td>
+                        lishi
+                    </td>
+                    <td>
+                        <img src="./img/nane.gif" style="height: 60px;">
+                    </td>
+                    <td>
+                        20000
+                    </td>
+                    <td>
+                        20
+                    </td>
+                    <td>
+                        <a href="emplist.html">delete emp</a>&nbsp;<a href="updateEmp.html">update emp</a>
+                    </td>
+                </tr>
+            </table>
+            <p>
+                <input type="button" class="button" value="Add Employee" onclick="location='addEmp.html'"/>
+            </p>
+        </div>
+    </div>
+    <div id="footer">
+        <div id="footer_bg">
+            ABC@126.com
+        </div>
+    </div>
+</div>
+</body>
 </html>
+<script src="./js/vue.js"></script>
+<script src="./js/axios.min.js"></script>
+<script>
+    var app = new Vue({
+        el: "#wrap",
+        data: {
+            user: {}
+        },
+        methods: {},
+        created: function () {
+            var userString = localStorage.getItem("user");
+            if (userString) {
+				this.user = JSON.parse(userString)
+            } else {
+            	location.href="/ems_vue/login.html";
+            }
+
+        }
+    });
+</script>
